--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "incremental": true,
     "plugins": [
       {
@@ -19,9 +19,9 @@
       }
     ],
     "paths": {
-      "@/": ["./src/"]
+      "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "/*.ts", "/.tsx", ".next/types/**/.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
